wp-content/themes/make-learn/scss/panels.scss
.content-panels {
	text-align: center;
	background: #333;
	color: #fff;
	.content-panel {
		margin-bottom: 45px;
	}
	h1, h2, h3, h4 { 
		font-family: "Roboto Light";
	}
	h1{ font-size: 60px; }
	h2 { font-size: 26px; }
	.btn { 
		font-family: "Roboto Light";
		min-width: 320px;
		margin-top: 25px;
		position: relative;
	}
}

.make-card, .make-panel  {
	border: solid 1px #979797;
	display: block;
	color: #fff;
	font-size: 20px;
	text-decoration: none;
	margin: 25px 0;
	height: 90%;
	max-height: 400px;
	.image-crop {
		max-height: 225px;
		overflow: hidden;
		width: 100%;
	}
	.column-info {
		padding: 0 10px;
		.column-title {
			font-family: "Roboto Bold";
			margin-top: 25px;
		}
		.column-text {
			font-family: "Roboto Light";
			margin-bottom: 15px;
		}
	}
	
	&:hover, &:active, &:visited {
		color: #fff;
	}
	&:hover {
		border: solid 2px #00AEEF;
	}
}

.three-column-cards {
	h2 { 
		text-align: left;
		margin-bottom: -15px;
	}
}

.center-column {
	display: block;
	padding: 30px 30px 0px 30px;
	border: solid 1px #979797;
	max-width: 750px;
	min-height: 285px;
	margin: 0 auto;
	margin-bottom: 30px;
	text-align: left;
	color: #fff;
	font-size: 20px;

	&:hover, &:active, &:focus {
		border: solid 2px #00AEEF;
		color: #fff;
	}
	.column-header { 
		margin-bottom: 20px;
	}
	.column-header, .column-title {
		font-weight: bold;
	}
	.image-crop {
		float: left;
		max-height: 225px;
		max-width: 50%;
		overflow: hidden;
		margin-right: 30px;
		margin-bottom: 30px;
	}
	@media screen and (max-width: 767px) {
		font-size: 15px;
		.column-header { 
			font-size: 16px;
		}
	}
}


.one-column-banner {
	background-size: cover;
	background-position: 50%;
	min-height: 187px;
	display: flex;
   align-items: center;
	justify-content: center;
	padding: 0 10px;
	a.btn {
      position: absolute;
      bottom: -65px;
	   left: 0;
      margin: 0 auto;
      right: 0;
      width: 200px;
	}
}

.three-column {
	.three-column-header {
		img {
			 padding-bottom: 20px;
		}
	}
	.make-panel {
		margin: 25px 20px;
		.column-info { 
			min-height: 100px; 
			padding: 0px 10px;
		}
		@media screen and (max-width: 996px) {
			margin: 25px 0px;
		}
		@media screen and (max-width: 767px) {
			height: 100%;
			margin: 0px;
			padding: 15px 0px;
			width: 100%;
			border: 0px;
			border-bottom: solid 1px #979797;
			.column-info {
				float: right;
				text-align: left;
				width: 60%;
				padding: 0px 25px;
			}
			img { 
				float: right;
				width: 35%;
			}
		}
	}
	@media screen and (max-width: 767px) {
		.three-column-contents .row > div:first-child {
			.make-panel {
				border-top: solid 1px #979797;
			}
		}
	}
}

.safari-mac .content-panels {
	@media (min-width: 982px) {
		.col-md-6 {
			width: 49.5%;
		}
	}
	@media (min-width: 768px) {
	  .col-sm-4 {
		  width: 33%;
		}
		.col-sm-6 {
			width: 49.5%;
		}
	}
}

.two-column {
	.container-fluid{ 
		margin-bottom: -45px; // probably remove this as more panels come online
	}
	.column {
		background-size: cover;
		.column-info { 
			padding: 45px 0px 25px; 
			.column-title {
				font-size: 48px;
				line-height: 46px;
				margin-bottom: 45px;
			}
			.column-list {
				text-align: left;
				margin: 0 15% 30px;
				li {
					list-style: disc;
					font-family: "Roboto Light";
					font-size: 24px;
				}
			}
		}
		.small-card {
			@media screen and (min-width: 981px) {
				width: 400px;
			}
			@media screen and (max-width: 981px) {
				margin: 0;
			}
			margin: 0 auto;
			padding: 25px 30px;
			background: #cbcbcb;
			img { 
				height: 80px;
				@media screen and (max-width: 767px) {
					height: 60px;
				}
			}
			.column-text {
				margin-top: 10px;
				color: #4a4a4a;
				font-family: "Roboto Light";
				font-size: 20px;
			}
			.btn {
				&::after {
					font-family: "LinearIcons-Free";
					content: "\e87a";
					position: absolute;
					right: 28%;
				}
				@media screen and (max-width: 767px) {
					min-width: 280px;
					&::after {
						right: 25%;
					}
				}
			}
		}
		@media screen and (max-width: 981px) {
			&:first-of-type {
				.small-card {
					margin-bottom: 30px;
					margin-top: -45px;
				}
			}
		}
	}
}

